# n-body-problem

./: .gitignore  CMakeLists.txt  README.md  body.h  config.json  export_web.py  generate_config.py  get_planet_data.py  main.c  visualization.py
